# python-validator

./: .gitignore  README.md  docker-compose.yml  run-all-tests.sh
.github/instructions/: backend.instructions.md  frontend.instructions.md  project.instructions.md  tdd.instructions.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 789642f82c78_create_submissions_table.py
backend/app/: main.py
backend/app/database/: __init__.py  session.py
backend/app/models/: submission.py
backend/app/routers/: submissions_controller.py  upload.py
backend/app/schemas/: submission.py
backend/app/services/: file_executor.py  service_exceptions.py  submission.py
backend/tests/integration/: test_submission_repository.py
backend/tests/unit/: test_upload.py
backend/tests/unit/routers/: test_submissions_controller.py  test_upload.py
backend/tests/unit/services/: test_file_executor.py  test_submission.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/api/: submitValidation.ts  validatorApi.ts
frontend/src/components/submission-form/: SubmissionForm.test.tsx  SubmissionForm.tsx
frontend/src/components/submission-table/: SubmissionTable.test.tsx  SubmissionTable.tsx
functional-tests/: .gitignore  cypress.config.ts  package-lock.json  package.json  tsconfig.json
functional-tests/cypress/e2e/: submission-file.cy.ts
functional-tests/cypress/fixtures/: sum_two_numbers.py  sum_two_numbers_wrong.py
