[project]
name = "python-validator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0,<0.140.0",
    "uvicorn[standard]>=0.30.0,<0.52.0",
    "sqlalchemy>=2.0.30,<2.1.0",
    "alembic>=1.13.0,<1.19.0",
    "python-multipart>=0.0.18,<0.0.33",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.2.0",
    "pytest-cov>=6.0.0,<7.2.0",
    "httpx2>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
